<resources>
    <string name="app_name">Foodie</string>
    <string name="favorite">Favorite</string>
    <string name="categories">Categories</string>
    <string name="meals">Meals</string>
    <string name="detail_desc">Category Description</string>
    <string name="about">About</string>
    <string name="categories_thumb">categories_thumb</string>
    <string name="categories_name">categories_name</string>
    <string name="categories_desc">categories_desc</string>
    <string name="error_text">Something went wrong</string>
    <string name="empty_text">No data found</string>
    <string name="my_name">Aditya Davin Pradana</string>
    <string name="my_university">UIN Sunan Kalijaga</string>
    <string name="my_location">Yogyakarta, Indonesia</string>
    <string name="tags">Tags</string>
    <string name="youtube">Youtube</string>
</resources>