<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".dashboard.categoriesdesc.CategoriesDescActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextAppearance="@style/Theme.Foodie.text_20_semibold"
        />

    <ImageView
        android:id="@+id/category_thumb"
        android:layout_width="175dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:transitionName="@string/categories_thumb"
        tools:ignore="ContentDescription"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/category_desc"
            style="@style/Theme.Foodie.text_12_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_desc"
            android:transitionName="@string/categories_desc" />

    </ScrollView>

</LinearLayout>