<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/about_container"
    tools:context=".about.AboutActivity">

    <ImageView
        android:id="@+id/about_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/profile"
        android:fitsSystemWindows="true"
        tools:ignore="ContentDescription" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/about_profile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                style="@style/Theme.Foodie.text_18_semibold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/my_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/university"
                style="@style/Theme.Foodie.text_14_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/my_university"
                app:drawableStartCompat="@drawable/ic_domain"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                style="@style/Theme.Foodie.text_14_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/my_location"
                app:drawableStartCompat="@drawable/ic_location"
                app:layout_constraintEnd_toEndOf="@+id/university"
                app:layout_constraintStart_toStartOf="@+id/university"
                app:layout_constraintTop_toBottomOf="@+id/university" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:weightSum="3"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_instagram"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/ic_instagram"
                    />

                <ImageButton
                    android:id="@+id/btn_github"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/ic_github"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    />

                <ImageButton
                    android:id="@+id/btn_linkedin"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/ic_linkedin"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>